--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -24,15 +24,6 @@
 	                employee: true, // optional, only when user has this role
 	                visitor: true // optional, only when user has this role
 	            }
-	        },
-	        content: { // optional, only if non-root content is selected
-	            users: {}, // optional, only if users is selected
-	            roles: {}, // optional, only if roles is selected
-	            products: {}, // optional, only if products is selected
-	            orders: {}, // optional, only if orders is selected
-	            login: {}, // optional, only if login is selected
-	            updatepassword: {}, // optional, only if updatepassword is selected
-	            createuser: {} // optional, only if createuser is selected
 	        }
 	    }
 	</script>
@@ -40,77 +31,38 @@
 	</style>
 </head>
 <body>
-	{{#user}}
-	    <div>
-	        <nav>
-	            <ul>
-	                {{#roles}}
-	                    {{#manager}}
-	                        <li><a href='/createuser'>Create User</a></li>
-	                    {{/manager}}
-	                    {{#employee}}
-	                        <li><a href='/updatepassword'>Update Password</a></li>
-	                    {{/employee}}
-	                {{/roles}}
-                    <li>
-                        <a id="logout" href='?'>
-                            {{#roles}}
-                                {{#visitor}}
-                                    Goodbye
-                                {{/visitor}}
-                                {{^visitor}}
-                                    Logout
-                                {{/visitor}}
-                            {{/roles}}
-                            {{^roles}}
+    <nav>
+        <ul>
+        	{{#user}}
+                {{#roles}}
+                    {{#manager}}
+                        <li><a href='/createuser'>Create User</a></li>
+                    {{/manager}}
+                    {{#employee}}
+                        <li><a href='/updatepassword'>Update Password</a></li>
+                    {{/employee}}
+                {{/roles}}
+                <li>
+                    <a id="logout" href='?'>
+                        {{#roles}}
+                            {{#visitor}}
+                                Goodbye
+                            {{/visitor}}
+                            {{^visitor}}
                                 Logout
-                            {{/roles}}
-                        </a>
-                    </li>
-	            </ul>
-	        </nav>
-	        <div>
-	            <!-- main content -->
-	            {{#content}}
-	                {{#users}}
-	                    {{>users}}
-	                {{/users}}
-	                {{#roles}}
-	                    {{>roles}}
-	                {{/roles}}
-	                {{#products}}
-	                    {{>products}}
-	                {{/products}}
-	                {{#orders}}
-	                    {{>orders}}
-	                {{/orders}}
-	                {{#login}}
-                        {{>login}}
-	                {{/login}}
-	                {{#updatepassword}}
-	                    {{>updatepassword}}
-	                {{/updatepassword}}
-	                {{#createuser}}
-	                    {{>createuser}}
-	                {{/createuser}}
-	            {{/content}}
-	            {{^content}}
-	                <!-- root path -->
-	            {{/content}}
-	        </div>
-	    </div>
-	{{/user}}
-	{{^user}}
-	    <div>
-	        <nav>
-	            <ul>
-	                <li><a href='/login'>Employee Login</a></li>
-	            </ul>
-	        </nav>
-	        <div>
-	            <!-- Seat map -->
-	        </div>
-	    </div>
-	{{/user}}
+                            {{/visitor}}
+                        {{/roles}}
+                        {{^roles}}
+                            Logout
+                        {{/roles}}
+                    </a>
+                </li>
+        	{{/user}}
+        	{{^user}}
+                <li><a href='/login'>Employee Login</a></li>
+        	{{/user}}
+        </ul>
+    </nav>
+    {{{yield}}}
 </body>
 </html>
