--- a/views/login.mustache
+++ b/views/login.mustache
@@ -9,6 +9,7 @@
     <div>
         <label for="password">password</label>
         <input id="password" name="password" type="password" />
+        <a href="/resetpassword">reset</a>
     </div>
     <div>
         <input id="submit" name="submit" type="submit" value="login" />
