--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -36,30 +36,30 @@
         	{{#user}}
                 {{#roles}}
                     {{#manager}}
-                        <li><a href='/createuser'>Create User</a></li>
+                        <li><a href='/users/'>manage user</a></li>
                     {{/manager}}
                     {{#employee}}
-                        <li><a href='/updatepassword'>Update Password</a></li>
+                        <li><a href='/updatepassword'>update password</a></li>
                     {{/employee}}
                 {{/roles}}
                 <li>
                     <a id="logout" href='?'>
                         {{#roles}}
                             {{#visitor}}
-                                Goodbye
+                                goodbye
                             {{/visitor}}
                             {{^visitor}}
-                                Logout
+                                logout
                             {{/visitor}}
                         {{/roles}}
                         {{^roles}}
-                            Logout
+                            logout
                         {{/roles}}
                     </a>
                 </li>
         	{{/user}}
         	{{^user}}
-                <li><a href='/login'>Employee Login</a></li>
+                <li><a href='/login'>employee login</a></li>
         	{{/user}}
         </ul>
     </nav>
