added underscore and backbone references to layout

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{#title}}{{title}} - {{/title}}FishEye Cafe</title>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+	<script type="text/javascript" src="/javascripts/underscore.js"></script>
+	<script type="text/javascript" src="/javascripts/backbone.js"></script>
 	<script type="text/javascript">
 	    $().ready(function() {
     	    $('#logout').click(function(event) {
