working on Backbone user

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="/javascripts/underscore.js"></script>
 	<script type="text/javascript" src="/javascripts/backbone.js"></script>
 	<script type="text/javascript" src="/javascripts/models.js"></script>
+	<script type="text/javascript" src="/javascripts/controllers.js"></script>
 	{{#session}}<script type="text/javascript">
 	        var session = {
 	            email: '{{email}}'
